--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 	<meta charset="utf-8"/>
-	<title> Fast UI Prototiper</title>
+	<title>Tinkle</title>
 	
 <!-- 	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">	 -->
 	
