--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<HTML lang="es">
+<HTML lang="en">
 <head>
 
 	<meta charset="utf-8"/>
-	<title>Tinkle</title>
+	<title>Tinkle releases</title>
 	
 <!-- 	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">	 -->
 	
@@ -24,22 +24,22 @@
 		<style>
 		</style>
 		
-		<header>
+		<header class="">
 			<div id="tinkle-logo" class="tinkle-logo">
 				<img class="mang-col-xxs-5 mang-col-xs-1 mang-col-sm-1 mang-col-mg-1 mang-col-lg-1 mang-col-xl-1 mang-col-xxl-1  " id="logo-tinkle" src="img/tinkle-logo.svg" alt="Tinkle">
 				<nav>
 				</nav>
 			</div>
 			
-			<div id="title" class="mang-container mang-col-xxs-10 mang-off-xxs-1 mang-col-sm-8 mang-off-sm-2 man mang-col-lg-6 mang-off-lg-3">
-				<h1 class="mang-font-centered mang-no-margin-top">Casos de COVID-19 por CCAA</h1>
+			<div id="title" class="mang-col-xxs-12 mang-col-sm-8 mang-off-sm-2 man mang-col-lg-6 mang-off-lg-3">
+				<h1 class="mang-font-centered mang-no-margin-top">Cases in Spain of COVID-19 by CCAA</h1>
 			</div>
 		</header>
 		
 		
 
-		<main class="mang-container mang-col-xxs-10 mang-off-xxs-1 mang-col-sm-8 mang-off-sm-2 man mang-col-lg-6 mang-off-lg-3">
-			<section id="map" class="" >
+		<main class="mang-container">
+			<section id="map" class="mang-col-xxs-12 mang-col-sm-8 mang-off-sm-2 man mang-col-lg-6 mang-off-lg-3" >
 				<?xml version="1.0" encoding="UTF-8"?>
 				<svg class="" viewBox="0 0 1021 748" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 					<!-- Generator: Sketch 63.1 (92452) - https://sketch.com -->
@@ -73,54 +73,54 @@
 									<g id="intervalo6" transform="translate(0.000000, 170.000000)">
 										<circle id="color6" fill="#D8D8D8" cx="13" cy="13" r="13"></circle>
 										<text font-family="Rajdhani-Bold, Rajdhani" font-size="16" font-weight="bold" fill="#404040">
-												<tspan x="43" y="18">entre
-												<tspan class="int5">0</tspan> y 
+												<tspan x="43" y="18">From
+												<tspan class="int5">0</tspan> to 
 												<tspan class="int6"> 250</tspan> 
-												casos</tspan>
+												cases</tspan>
 										</text>
 									</g>
 									<g id="intervalo5" transform="translate(0.000000, 136.000000)">
 										<circle id="color5" fill="#D8D8D8" cx="13" cy="13" r="13"></circle>
 										<text font-family="Rajdhani-Bold, Rajdhani" font-size="16" font-weight="bold" fill="#404040">
-												<tspan x="43" y="18">entre
-												<tspan class="int4">0</tspan> y 
+												<tspan x="43" y="18">From
+												<tspan class="int4">0</tspan> to 
 												<tspan class="int5"> 250</tspan> 
-												casos</tspan>
+												cases</tspan>
 										</text>
 									</g>
 									<g id="intervalo4" transform="translate(0.000000, 102.000000)">
 										<circle id="color4" fill="#D8D8D8" cx="13" cy="13" r="13"></circle>
 										<text font-family="Rajdhani-Bold, Rajdhani" font-size="16" font-weight="bold" fill="#404040">
-												<tspan x="43" y="18">entre
-												<tspan class="int3">0</tspan> y 
+												<tspan x="43" y="18">From
+												<tspan class="int3">0</tspan> to 
 												<tspan class="int4"> 250</tspan> 
-												casos</tspan>
+												cases</tspan>
 										</text>
 										</g>
 									<g id="intervalo3" transform="translate(0.000000, 68.000000)">
 										<circle id="color3" fill="#D8D8D8" cx="13" cy="13" r="13"></circle>
 										<text font-family="Rajdhani-Bold, Rajdhani" font-size="16" font-weight="bold" fill="#404040">
-												<tspan x="43" y="18">entre
-												<tspan class="int2">0</tspan> y 
+												<tspan x="43" y="18">From
+												<tspan class="int2">0</tspan> to 
 												<tspan class="int3"> 250</tspan> 
-												casos</tspan>
+												cases</tspan>
 										</text>
 									</g>
 									<g id="intervalo2" transform="translate(0.000000, 34.000000)">
 										<circle id="color2" fill="#D8D8D8" cx="13" cy="13" r="13"></circle>
 										<text font-family="Rajdhani-Bold, Rajdhani" font-size="16" font-weight="bold" fill="#404040">
-											<tspan x="43" y="18">entre 
-											<tspan class="int1">0</tspan> y 
+											<tspan x="43" y="18">From 
+											<tspan class="int1">0</tspan> to 
 											<tspan class="int2"> 250</tspan> 
-											casos</tspan>
+											cases</tspan>
 										</text>
 									</g>
 									<g id="intervalo1">
 										<circle id="color1" fill="#D8D8D8" cx="13" cy="13" r="13"></circle>
 										<text font-family="Rajdhani-Bold, Rajdhani" font-size="16" font-weight="bold" fill="#404040">
-											<tspan x="43" y="18">entre 0 y 
+											<tspan x="43" y="18">From 0 to 
 											<tspan class="int1">250</tspan>
-											casos</tspan>
+											cases</tspan>
 										</text>
 									</g>
 								</g>
@@ -133,9 +133,9 @@
 		</main>
 
 		
-		<form class="mang-col-10 mang-off-1">
+		<form class="mang-col-xxs-12 mang-col-sm-8 mang-off-sm-2 man mang-col-lg-6 mang-off-lg-3">
 			<legend >
-					<p class="mang-footnote">Introduce tus datos</p>
+					<p class="mang-footnote">Enter your data</p>
 			</legend>
 			<fieldset>
 				<input type="number" id="int1" placeholder="10" onchange="customIntervals(1, value)" accept="number">
