--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
 	<meta charset="utf-8"/>
 	<title>Tinkle releases</title>
 	
-<!-- 	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">	 -->
-	
 	<!-- mang fast system -->
 	<link rel="stylesheet" type="text/css" href="mang-fast-ui-system/mang-fast-ui-overrides.css" />
 	
@@ -71,15 +69,15 @@
 								</g>
 								
 								<g id="Intervalos" transform="translate(745.000000, 552.000000)">
-									<g id="intervalo6" transform="translate(0.000000, 170.000000)">
-										<circle id="color6" fill="#D8D8D8" cx="13" cy="13" r="13"></circle>
-										<text font-family="Rajdhani-Bold, Rajdhani" font-size="16" font-weight="bold" fill="#404040">
-												<tspan x="43" y="18">From
-												<tspan class="int5">0</tspan> to 
-												<tspan class="int6"> 250</tspan> 
-												cases</tspan>
-										</text>
-									</g>
+<!-- 									<g id="intervalo6" transform="translate(0.000000, 170.000000)"> -->
+<!-- 										<circle id="color6" fill="#D8D8D8" cx="13" cy="13" r="13"></circle> -->
+<!-- 										<text font-family="Rajdhani-Bold, Rajdhani" font-size="16" font-weight="bold" fill="#404040"> -->
+<!-- 												<tspan x="43" y="18">From -->
+<!-- 												<tspan class="int5">0</tspan> to  -->
+<!-- 												<tspan class="int6"> 250</tspan>  -->
+<!-- 												cases</tspan> -->
+<!-- 										</text> -->
+<!-- 									</g> -->
 									<g id="intervalo5" transform="translate(0.000000, 136.000000)">
 										<circle id="color5" fill="#D8D8D8" cx="13" cy="13" r="13"></circle>
 										<text font-family="Rajdhani-Bold, Rajdhani" font-size="16" font-weight="bold" fill="#404040">
@@ -144,7 +142,7 @@
 				<input type="number" id="int3" placeholder="100" onchange="customIntervals(3, value)" accept="number">
 				<input type="number" id="int4" placeholder="200" onchange="customIntervals(4, value)" accept="number">
 				<input type="number" id="int5" placeholder="400" onchange="customIntervals(5, value)" accept="number">
-				<input type="number" id="int6" placeholder="800" onchange="customIntervals(6, value)" accept="number">
+<!-- 				<input type="number" id="int6" placeholder="800" onchange="customIntervals(6, value)" accept="number"> -->
 				<input type="file" id="csvFileInput" onchange="handleFiles(this.files)" accept=".csv">
 			</fieldset>
 		</form>
